about and rules pages completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="text_false">False</string>
     <string name="title_android_question">Android Trivia (%1$d/%2$d)</string>
 
+    <string name="riles_text">Select the answer from the options given. Once you answer a question you cannot change your answer.<br/>Once you have answered all the questions you will go to a page that tells you your score.</string>
+<string name="about_text">The Rick and Morty quiz will help remind you of important concepts you have learned by watching Rick and Morty.<br/><br/>Consider modifying the questions and graphics to make this game your own.</string>
 </resources>
